[package]
name = "flow_wm"
version = "0.1.0"
edition = "2024"

[dependencies]
# The core building blocks
smithay = { version = "0.7.0", features = [
	"backend_drm",
	"backend_libinput",
	"renderer_gl",
	"wayland_frontend",
	"xwayland",
] }

# The Event Loop
calloop = "0.14.3"

# Logging (essential for debugging TTY crashes)
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Low level types
udev = "0.9.3"
